--- a/recipe.yaml
+++ b/recipe.yaml
@@ -41,10 +41,11 @@ requirements:
     - pydiso >=0.1.0, <0.2.dev
     - python-mumps >=0.0.3, <0.0.4.dev
     # constraint version for some indirect dependencies from SimPEG
+    - tqdm >=4.66.1, <5.0.dev
+    # constrain version for some indirect dependencies from SimPEG
     - geoana >=0.7.0, <0.8.dev
     - matplotlib-base >=3.8.4, <3.9.dev
     - pymatsolver >=0.3.0, <0.4.dev
-    - tqdm >=4.66.1, <5.0.dev
     - zarr >=2.14.2, <2.15.dev
   run_constraints:
     - __glibc >=2.17
