--- a/environments/py-3.12-win-64.conda.lock.yml
+++ b/environments/py-3.12-win-64.conda.lock.yml
@@ -18,6 +18,7 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2025.1.31=pyhd8ed1ab_0
+  - cffi=1.17.1=py312h4389bb4_0
   - click=8.1.8=pyh7428d3b_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
@@ -31,10 +32,13 @@ dependencies:
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.56.0=py312h31fea79_0
   - freetype=2.12.1=hdaf720e_2
-  - fsspec=2025.2.0=pyhd8ed1ab_0
+  - fsspec=2025.3.0=pyhd8ed1ab_0
   - geoana=0.7.2=py312hbaa7e33_0
+  - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.13.0=nompi_py312ha036244_100
   - hdf5=1.14.3=nompi_hb2c4d47_109
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
   - importlib-metadata=8.6.1=pyha770c72_0
   - importlib_metadata=8.6.1=hd8ed1ab_0
   - intel-openmp=2024.2.1=h57928b3_1083
@@ -77,7 +81,7 @@ dependencies:
   - matplotlib-base=3.8.4=py312hfee7060_2
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py312hd5eb7cc_0
-  - mumps-seq=5.7.3=h9576071_7
+  - mumps-seq=5.7.3=h9576071_8
   - munkres=1.1.4=pyh9f0ad1d_0
   - numcodecs=0.15.1=py312h72972c8_0
   - numpy=1.26.4=py312h8753938_0
@@ -90,6 +94,7 @@ dependencies:
   - pip=25.0.1=pyh8b19718_0
   - psutil=7.0.0=py312h4389bb4_0
   - pthread-stubs=0.4=h0e40799_1002
+  - pycparser=2.22=pyh29332c3_1
   - pydantic=2.10.6=pyh3cfb1c2_0
   - pydantic-core=2.27.2=py312h2615798_0
   - pydiso=0.1.2=py312h01acb21_0
@@ -120,7 +125,7 @@ dependencies:
   - tzdata=2025a=h78e105d_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py312h4389bb4_0
-  - urllib3=2.2.2=pyhd8ed1ab_0
+  - urllib3=2.3.0=pyhd8ed1ab_0
   - vc=14.3=hbf610ac_24
   - vc14_runtime=14.42.34438=hfd919c2_24
   - vs2015_runtime=14.42.34438=h7142326_24
@@ -134,13 +139,14 @@ dependencies:
   - zarr=2.14.2=pyhd8ed1ab_0
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstd=1.5.7=hbeecb71_1
+  - zstandard=0.23.0=py312h7606c53_1
+  - zstd=1.5.6=h0ea2cb4_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@6ba24321d5311bbaf7ab460261ce6730ed541131
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@94e2e48fb93d9819a63f11f10cf11d487fbdb20f
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@275985aa18af76d70d55311e45dcfed149e62089
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@680a233e2d3380c084a05a6e3cb51b28e6b450ab
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@39de1da1495aff6d16641d408317619e23adbdb4
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@1ed273892ca0494a3b612d075a66dd4a1de2283a
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fcd14f4a511583b410f91c3d8e97be1fc755bdb5
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@826b686061e177b769838290bdfb0a70d1884b1c
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
 
 variables:
   KMP_WARNINGS: 0
