--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -18,7 +18,7 @@ dependencies:
   - astroid=3.3.9=py310hff52083_0
   - asttokens=3.0.0=pyhd8ed1ab_1
   - async-lru=2.0.4=pyhd8ed1ab_1
-  - attrs=25.1.0=pyh71513ae_0
+  - attrs=25.3.0=pyh71513ae_0
   - babel=2.17.0=pyhd8ed1ab_0
   - beautifulsoup4=4.13.3=pyha770c72_0
   - bleach=6.2.0=pyh29332c3_4
@@ -57,7 +57,7 @@ dependencies:
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.56.0=py310h89163eb_0
   - fqdn=1.5.1=pyhd8ed1ab_1
-  - freetype=2.12.1=h267a509_2
+  - freetype=2.13.3=h48d6fc4_0
   - fsspec=2025.3.0=pyhd8ed1ab_0
   - geoana=0.7.2=py310ha2bacc8_0
   - greenlet=3.1.1=py310hf71b8c6_1
@@ -98,7 +98,7 @@ dependencies:
   - jupyter_events=0.12.0=pyh29332c3_0
   - jupyter_server=2.15.0=pyhd8ed1ab_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
-  - jupyterlab=4.3.5=pyhd8ed1ab_0
+  - jupyterlab=4.3.6=pyhd8ed1ab_0
   - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
@@ -222,7 +222,7 @@ dependencies:
   - python_abi=3.10=5_cp310
   - pytz=2024.1=pyhd8ed1ab_0
   - pyyaml=6.0.2=py310h89163eb_2
-  - pyzmq=26.2.1=py310h71f11fc_0
+  - pyzmq=26.3.0=py310h71f11fc_0
   - readline=8.2=h8c095d6_2
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
   - referencing=0.36.2=pyh29332c3_0
@@ -256,13 +256,13 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_1
   - sphinxcontrib-qthelp=2.0.0=pyhd8ed1ab_1
   - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_1
-  - sqlalchemy=2.0.38=py310ha75aee5_0
+  - sqlalchemy=2.0.39=py310ha75aee5_1
   - stack_data=0.6.3=pyhd8ed1ab_1
   - tabulate=0.9.0=pyhd8ed1ab_2
   - tbb=2021.13.0=hceb3a55_1
   - tblib=3.0.0=pyhd8ed1ab_1
   - terminado=0.18.1=pyh0d859eb_0
-  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
   - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_1
@@ -295,12 +295,12 @@ dependencies:
   - zeromq=4.3.5=h3b0a872_7
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.19.0=py310h5764c6d_0
+  - zstandard=0.23.0=py310ha75aee5_1
   - zstd=1.5.7=hb8e6e7a_1
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@1ed273892ca0494a3b612d075a66dd4a1de2283a
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fcd14f4a511583b410f91c3d8e97be1fc755bdb5
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@826b686061e177b769838290bdfb0a70d1884b1c
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@402aac24290356fd69dd3b9d762607c05b548b78
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@79ba55ab38d5cab6d8292c3dd904fbd043f26da9
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
 
