update locks to include Annotation

--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -30,7 +30,7 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.56.0=py310h38315fa_0
-  - freetype=2.12.1=hdaf720e_2
+  - freetype=2.13.3=h0b5ce68_0
   - fsspec=2025.3.0=pyhd8ed1ab_0
   - geoana=0.7.2=py310h3e8ed56_0
   - h2=4.2.0=pyhd8ed1ab_0
@@ -65,7 +65,7 @@ dependencies:
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.6.4=h2466b09_0
   - libpng=1.6.47=had7236b_0
-  - libsqlite=3.49.1=h67fdade_1
+  - libsqlite=3.49.1=h67fdade_2
   - libssh2=1.11.1=he619c9f_0
   - libtiff=4.7.0=h797046b_3
   - libwebp-base=1.5.0=h3b0e114_0
@@ -79,7 +79,7 @@ dependencies:
   - matplotlib-base=3.8.4=py310hadb10a8_2
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py310hc19bc0b_0
-  - mumps-seq=5.7.3=h9576071_8
+  - mumps-seq=5.7.3=hbaa6519_9
   - munkres=1.1.4=pyh9f0ad1d_0
   - numcodecs=0.13.1=py310hb4db72f_0
   - numpy=1.26.4=py310hf667824_0
@@ -113,7 +113,7 @@ dependencies:
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
   - tblib=3.0.0=pyhd8ed1ab_1
-  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
   - tk=8.6.13=h5226925_1
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.2=py310ha8f682b_0
@@ -136,12 +136,12 @@ dependencies:
   - zarr=2.14.2=pyhd8ed1ab_0
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.19.0=py310h8d17308_0
+  - zstandard=0.23.0=py310ha8f682b_1
   - zstd=1.5.7=hbeecb71_1
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@1ed273892ca0494a3b612d075a66dd4a1de2283a
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@fcd14f4a511583b410f91c3d8e97be1fc755bdb5
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@826b686061e177b769838290bdfb0a70d1884b1c
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@34154ed8cdf27714b745bd5eb597e1fdd6798b23
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@79ba55ab38d5cab6d8292c3dd904fbd043f26da9
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
 
