--- a/environments/py-3.11-win-64.conda.lock.yml
+++ b/environments/py-3.11-win-64.conda.lock.yml
@@ -31,7 +31,7 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.56.0=py311h5082efb_0
-  - freetype=2.12.1=hdaf720e_2
+  - freetype=2.13.3=h0b5ce68_0
   - fsspec=2025.3.0=pyhd8ed1ab_0
   - geoana=0.7.2=py311h9b10771_0
   - h2=4.2.0=pyhd8ed1ab_0
@@ -67,7 +67,7 @@ dependencies:
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.6.4=h2466b09_0
   - libpng=1.6.47=had7236b_0
-  - libsqlite=3.49.1=h67fdade_1
+  - libsqlite=3.49.1=h67fdade_2
   - libssh2=1.11.1=he619c9f_0
   - libtiff=4.7.0=h797046b_3
   - libwebp-base=1.5.0=h3b0e114_0
@@ -81,7 +81,7 @@ dependencies:
   - matplotlib-base=3.8.4=py311h9b31f6e_2
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py311h3257749_0
-  - mumps-seq=5.7.3=h9576071_8
+  - mumps-seq=5.7.3=hbaa6519_9
   - munkres=1.1.4=pyh9f0ad1d_0
   - numcodecs=0.15.1=py311hcf9f919_0
   - numpy=1.26.4=py311h0b4df5a_0
@@ -115,7 +115,7 @@ dependencies:
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
   - tblib=3.0.0=pyhd8ed1ab_1
-  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
   - tk=8.6.13=h5226925_1
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.2=py311he736701_0
@@ -139,12 +139,12 @@ dependencies:
   - zarr=2.14.2=pyhd8ed1ab_0
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
-  - zstandard=0.19.0=py311ha68e1ae_0
+  - zstandard=0.23.0=py311he736701_1
   - zstd=1.5.7=hbeecb71_1
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@de8092abbc030d2230720fd256d97dd87da42688
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d5298460115bff5ae1f6cfeed6d53361cd26c82a
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@0ca2bf61ddbb53616bea91d4c85a8a4198b1e77e
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@ed7ef288ad91351465c6991559486f927cc0d269
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@826b686061e177b769838290bdfb0a70d1884b1c
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@a99bbd282be7bce02254475e907b555767277820
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@b745466b3d42f5c04c7e0494551cbfe4ea36fb33
 
