--- a/environments/py-3.12-win-64.conda.lock.yml
+++ b/environments/py-3.12-win-64.conda.lock.yml
@@ -18,6 +18,7 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - certifi=2025.1.31=pyhd8ed1ab_0
+  - cffi=1.17.1=py312h4389bb4_0
   - click=8.1.8=pyh7428d3b_0
   - cloudpickle=3.1.1=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_1
@@ -30,11 +31,14 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
   - fonttools=4.56.0=py312h31fea79_0
-  - freetype=2.12.1=hdaf720e_2
+  - freetype=2.13.3=h0b5ce68_0
   - fsspec=2025.3.0=pyhd8ed1ab_0
   - geoana=0.7.2=py312hbaa7e33_0
+  - h2=4.2.0=pyhd8ed1ab_0
   - h5py=3.13.0=nompi_py312ha036244_100
   - hdf5=1.14.3=nompi_hb2c4d47_109
+  - hpack=4.1.0=pyhd8ed1ab_0
+  - hyperframe=6.1.0=pyhd8ed1ab_0
   - importlib-metadata=8.6.1=pyha770c72_0
   - importlib_metadata=8.6.1=hd8ed1ab_0
   - intel-openmp=2024.2.1=h57928b3_1083
@@ -63,7 +67,7 @@ dependencies:
   - liblapack=3.9.0=31_h1aa476e_mkl
   - liblzma=5.6.4=h2466b09_0
   - libpng=1.6.47=had7236b_0
-  - libsqlite=3.49.1=h67fdade_1
+  - libsqlite=3.49.1=h67fdade_2
   - libssh2=1.11.1=he619c9f_0
   - libtiff=4.7.0=h797046b_3
   - libwebp-base=1.5.0=h3b0e114_0
@@ -77,7 +81,7 @@ dependencies:
   - matplotlib-base=3.8.4=py312hfee7060_2
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py312hd5eb7cc_0
-  - mumps-seq=5.7.3=h9576071_8
+  - mumps-seq=5.7.3=hbaa6519_9
   - munkres=1.1.4=pyh9f0ad1d_0
   - numcodecs=0.15.1=py312h72972c8_0
   - numpy=1.26.4=py312h8753938_0
@@ -90,6 +94,7 @@ dependencies:
   - pip=25.0.1=pyh8b19718_0
   - psutil=7.0.0=py312h4389bb4_0
   - pthread-stubs=0.4=h0e40799_1002
+  - pycparser=2.22=pyh29332c3_1
   - pydantic=2.10.6=pyh3cfb1c2_0
   - pydantic-core=2.27.2=py312h2615798_0
   - pydiso=0.1.2=py312h01acb21_0
@@ -110,7 +115,7 @@ dependencies:
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=h62715c5_1
   - tblib=3.0.0=pyhd8ed1ab_1
-  - threadpoolctl=3.5.0=pyhc1e730c_0
+  - threadpoolctl=3.6.0=pyhecae5ae_0
   - tk=8.6.13=h5226925_1
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.2=py312h4389bb4_0
@@ -120,7 +125,7 @@ dependencies:
   - tzdata=2025a=h78e105d_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=16.0.0=py312h4389bb4_0
-  - urllib3=2.2.2=pyhd8ed1ab_0
+  - urllib3=2.3.0=pyhd8ed1ab_0
   - vc=14.3=hbf610ac_24
   - vc14_runtime=14.42.34438=hfd919c2_24
   - vs2015_runtime=14.42.34438=h7142326_24
@@ -134,11 +139,12 @@ dependencies:
   - zarr=2.14.2=pyhd8ed1ab_0
   - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
+  - zstandard=0.23.0=py312h4389bb4_1
   - zstd=1.5.7=hbeecb71_1
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@de8092abbc030d2230720fd256d97dd87da42688
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d5298460115bff5ae1f6cfeed6d53361cd26c82a
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@0ca2bf61ddbb53616bea91d4c85a8a4198b1e77e
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@ed7ef288ad91351465c6991559486f927cc0d269
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@826b686061e177b769838290bdfb0a70d1884b1c
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@a99bbd282be7bce02254475e907b555767277820
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@b745466b3d42f5c04c7e0494551cbfe4ea36fb33
 
