--- a/environments/py-3.12-win-64-dev.conda.lock.yml
+++ b/environments/py-3.12-win-64-dev.conda.lock.yml
@@ -148,7 +148,7 @@ dependencies:
   - mccabe=0.7.0=pyhd8ed1ab_1
   - mdit-py-plugins=0.4.2=pyhd8ed1ab_1
   - mdurl=0.1.2=pyhd8ed1ab_1
-  - mistune=3.1.2=pyhd8ed1ab_0
+  - mistune=3.1.3=pyh29332c3_0
   - mkl=2024.2.2=h66d3029_15
   - msgpack-python=1.1.0=py312hd5eb7cc_0
   - mumps-seq=5.7.3=hbaa6519_9
@@ -292,9 +292,9 @@ dependencies:
   - zstandard=0.23.0=py312h4389bb4_1
   - zstd=1.5.7=hbeecb71_1
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@1ed273892ca0494a3b612d075a66dd4a1de2283a
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@34154ed8cdf27714b745bd5eb597e1fdd6798b23
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@79ba55ab38d5cab6d8292c3dd904fbd043f26da9
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@02f6fd3aa7530dc81fe2e32e7e2c874b429daaf7
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@513d08201f3401e61bc07514a318ad581e8e83aa
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@04f222146c082ba646b851f510056b4b2bce1b85
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
 
