Move dask to conda-lock dependencies
(cherry picked from commit 2f9c6179a483896a2396545ac7408a89026cfd64)

# Conflicts:
#	environments/py-3.10-linux-64-dev.conda.lock.yml
#	environments/py-3.10-linux-64.conda.lock.yml
#	environments/py-3.10-win-64-dev.conda.lock.yml
#	environments/py-3.10-win-64.conda.lock.yml
#	environments/py-3.11-linux-64-dev.conda.lock.yml
#	environments/py-3.11-linux-64.conda.lock.yml
#	environments/py-3.11-win-64-dev.conda.lock.yml
#	environments/py-3.11-win-64.conda.lock.yml
#	environments/py-3.12-linux-64-dev.conda.lock.yml
#	environments/py-3.12-linux-64.conda.lock.yml
#	environments/py-3.12-win-64-dev.conda.lock.yml
#	environments/py-3.12-win-64.conda.lock.yml
#	py-3.10.conda-lock.yml
#	py-3.11.conda-lock.yml
#	py-3.12.conda-lock.yml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
-dask = {version = "2024.6.*", extras = ["distributed"]}  # also in simpeg[dask]
 discretize = "0.11.*"  # also in simpeg, octree-creation-app
-distributed = "2024.6.*"  # because conda-lock doesn't take dask extras into account
 numpy = "~1.26.0" # also in geoh5py, simpeg
 scikit-learn = "~1.4.0"
 scipy = "~1.14.0"
@@ -95,6 +92,8 @@ libblas = "*=*mkl"  # because simpeg already brings in the MKL
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
 bokeh = ">=3.6.0, <3.7.0"  # from simpeg
+dask = ">=2024.6.*"
+distributed = ">=2024.6.*"
 fsspec = ">=2022.0"  # from simpeg[dask]
 geoana = ">=0.7.0, <0.8.dev"  # from simpeg
 h5py = ">=3.2.1, <4.0.dev"  # from geoh5py
