--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ h5py = ">=3.2.1, <4.0.dev"  # from geoh5py
 matplotlib-base = ">=3.8.4, <3.9.dev"  # from simpeg
 mkl = ">=2024.2.2"
 Pillow = ">=10.3.0, <10.4.dev"  # from geoh5py
+pyarrow = ">=19.0.0, <20.0.dev"  # from simpeg[dask]
 pydantic = ">=2.5.2, <3.0.dev"  # from geoh5py, geoapps-utils
 pymatsolver = ">=0.3.0, <0.4.dev"  # from simpeg
 tqdm = ">=4.66.1, <5.0.dev"  # from simpeg
