--- a/environments/py-3.11-linux-64.conda.lock.yml
+++ b/environments/py-3.11-linux-64.conda.lock.yml
@@ -14,7 +14,7 @@ dependencies:
   - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py311hfdbb021_2
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.34.4=hb9d3cd8_0
+  - c-ares=1.34.5=hb9d3cd8_0
   - ca-certificates=2025.1.31=hbcca054_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
@@ -31,7 +31,7 @@ dependencies:
   - discretize=0.11.2=py311h5b7b71f_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.56.0=py311h2dc5d0c_0
+  - fonttools=4.57.0=py311h2dc5d0c_0
   - freetype=2.13.3=h48d6fc4_0
   - fsspec=2025.3.2=pyhd8ed1ab_0
   - geoana=0.7.2=py311h5b7b71f_0
@@ -56,7 +56,7 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=31_h372d94f_mkl
-  - libcurl=8.12.1=h332b0f4_0
+  - libcurl=8.13.0=h332b0f4_0
   - libdeflate=1.23=h4ddbbb0_0
   - libdlf=0.3.0=pyhd8ed1ab_1
   - libedit=3.1.20250104=pl5321h7949ede_0
@@ -71,7 +71,7 @@ dependencies:
   - libiconv=1.18=h4ce23a2_1
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=31_hc41d3b0_mkl
-  - liblzma=5.6.4=hb9d3cd8_0
+  - liblzma=5.8.1=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.47=h943b412_0
@@ -85,9 +85,9 @@ dependencies:
   - libwebp-base=1.5.0=h851e524_0
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.13.7=h0d44e9d_0
+  - libxml2=2.13.7=h81593ed_1
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-openmp=20.1.1=h024ca30_1
+  - llvm-openmp=20.1.2=h024ca30_0
   - locket=1.0.0=pyhd8ed1ab_0
   - markupsafe=3.0.2=py311h2dc5d0c_1
   - matplotlib-base=3.8.4=py311ha4ca890_2
@@ -101,7 +101,7 @@ dependencies:
   - numcodecs=0.15.1=py311h7db5c69_0
   - numpy=1.26.4=py311h64a7726_0
   - openjpeg=2.5.3=h5fbd93e_0
-  - openssl=3.4.1=h7b32b05_0
+  - openssl=3.5.0=h7b32b05_0
   - packaging=24.2=pyhd8ed1ab_2
   - pandas=2.2.3=py311h7db5c69_1
   - partd=1.4.2=pyhd8ed1ab_0
@@ -110,8 +110,8 @@ dependencies:
   - psutil=7.0.0=py311h9ecbd09_0
   - pthread-stubs=0.4=hb9d3cd8_1002
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.11.1=pyh3cfb1c2_0
-  - pydantic-core=2.33.0=py311h687327b_0
+  - pydantic=2.11.2=pyh3cfb1c2_0
+  - pydantic-core=2.33.1=py311h687327b_0
   - pydiso=0.1.2=py311h19ea254_0
   - pymatsolver=0.3.1=pyh48887ae_201
   - pyparsing=3.2.3=pyhd8ed1ab_1
@@ -126,7 +126,7 @@ dependencies:
   - readline=8.2=h8c095d6_2
   - scikit-learn=1.4.2=py311he08f58d_1
   - scipy=1.14.1=py311he9a78e4_2
-  - setuptools=75.8.2=pyhff2d567_0
+  - setuptools=78.1.0=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_1
   - tbb=2021.13.0=hceb3a55_1
@@ -136,9 +136,9 @@ dependencies:
   - toolz=1.0.0=pyhd8ed1ab_1
   - tornado=6.4.2=py311h9ecbd09_0
   - tqdm=4.67.1=pyhd8ed1ab_1
-  - typing-extensions=4.13.0=h9fa5a19_1
+  - typing-extensions=4.13.1=hf5ce1d7_0
   - typing-inspection=0.4.0=pyhd8ed1ab_0
-  - typing_extensions=4.13.0=pyh29332c3_1
+  - typing_extensions=4.13.1=pyh29332c3_0
   - tzdata=2025b=h78e105d_0
   - unicodedata2=16.0.0=py311h9ecbd09_0
   - urllib3=2.3.0=pyhd8ed1ab_0
@@ -154,11 +154,11 @@ dependencies:
   - zstandard=0.23.0=py311h9ecbd09_1
   - zstd=1.5.7=hb8e6e7a_2
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@02f6fd3aa7530dc81fe2e32e7e2c874b429daaf7
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@117b245c90b38380e6b953368e5332bdfb4cbaad
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@a365076ef89082143a3a460df55e2db301af849c
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@c1797da5ca947c6f48555ea7f7680c0c63c1c456
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@6bf4ac8a7fc6c111216e8042a075f9e92ce38d41
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@8da14d56ec91ecc8e8a7fb33cb7df4505493537f
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@59dbfbebbcd1cf652e80dda2df29e048ea84509b
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@ebfaa0eb228530a6af0d047a7ff674a5ffa4abdd
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@4ed839200280c485731475d73c696d1b7ac79b99
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@8dd1faf63a5ce7ac8e467f0542127e9edc908933
 
 variables:
   KMP_WARNINGS: 0
