[GEOPY-2049] skip version tests in conda recipe

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -56,7 +56,7 @@ tests:
       imports:
         - simpeg_drivers
   - script:
-      - pytest ./tests
+      - pytest --ignore=tests/version_test.py
     requirements:
       run:
         - pytest
