--- a/recipe.yaml
+++ b/recipe.yaml
@@ -60,11 +60,7 @@ tests:
         - geoh5py
         - dask
         - distributed
-
-      # `pip check` fails on missing dask-core because it only sees name 'dask'
-      # Possibly, use custom mapping for dask => dask-core
-      # See `conda-lock --pypi_to_conda_lookup_file`, or the `pixi` option "conda-pypi-map"
-      pip_check: false
+      pip_check: true
 
   - script:
       - pytest --ignore=tests/version_test.py
