[GEOPY-2141] add link to repo, homepage and doc in the Conda recipe

--- a/recipe.yaml
+++ b/recipe.yaml
@@ -75,8 +75,10 @@ tests:
 
 about:
   license: MIT
-  license_file:
-    - LICENSE
+  license_file: LICENSE
+  homepage: https://www.mirageoscience.com/mining-industry-software/python-integration/
+  repository: https://github.com/MiraGeoscience/simpeg-drivers
+  documentation: https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/
 
 extra:
   recipe-maintainers:
